--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
-name: Release
+name: Main branch
 
 permissions:
   checks: write
+  pull-requests: write
 
 # Enable Buildkit and let compose use it to speed up image building
 env:
@@ -12,6 +13,7 @@ on:
   push:
     branches: "main"
     paths-ignore: [ "docs/**" ]
+    tags-ignore: [ "v*" ]
 
 jobs:
   qa:
