--- a/.github/workflows/qa/linters.yml
+++ b/.github/workflows/qa/linters.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Checkout Code Repository
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Build the Stack
