--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   qa:
-    uses: ./.github/workflows/qa/qa.yml
+    uses: ./.github/workflows/qa.yml
     with:
       silent_linters: true
   publish_reports:
