--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ on:
 
 jobs:
   qa:
-    uses: ./.github/workflows/qa/qa.yml
+    uses: ./.github/workflows/qa.yml
   publish_reports:
-    uses: ./.github/workflows/qa/publish_reports.yml
+    uses: ./.github/workflows/publish_reports.yml
     if: success() || failure()
     needs: qa
     with:
