--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -31,5 +31,6 @@ jobs:
   deploy:
     uses: ./.github/workflows/deploy_yc.yml
     needs: publish_backend
-    environment: next
+    with:
+      env_name: next
     secrets: inherit
