--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -27,6 +27,7 @@ jobs:
     uses: ./.github/workflows/publish_image.yml
     with:
       image_name: "backend"
+      dockerfile: "./compose/production/django/Dockerfile"
     secrets: inherit
   deploy:
     uses: ./.github/workflows/deploy_yc.yml
