--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,19 +9,20 @@ env:
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
-  push:
-    branches: "main"
-    paths-ignore: [ "docs/**" ]
+  release:
+    types: [published]
 
 jobs:
   publish_backend:
     uses: ./.github/workflows/publish_image.yml
     with:
       image_name: "backend"
+      dockerfile: "./compose/production/django/Dockerfile"
+      tag_latest: true
     secrets: inherit
   deploy:
     uses: ./.github/workflows/deploy_yc.yml
     needs: publish_backend
     with:
-      env_name: "next"
+      env_name: "production"
     secrets: inherit
