--- a/release-please-config.json
+++ b/release-please-config.json
@@ -12,5 +12,19 @@
       "sonar-project.properties",
       "read_comics/__init__.py"
   ],
-  "bootstrap-sha": "d082e73be155d908bc170327584d4f29b3fc3d84"
+  "bootstrap-sha": "d082e73be155d908bc170327584d4f29b3fc3d84",
+  "changelog-sections": [
+    { "type": "feat", "section": "Features" },
+    { "type": "feature", "section": "Features" },
+    { "type": "fix", "section": "Bug Fixes" },
+    { "type": "perf", "section": "Performance Improvements" },
+    { "type": "revert", "section": "Reverts" },
+    { "type": "docs", "section": "Documentation", "hidden": true },
+    { "type": "style", "section": "Styles", "hidden": true },
+    { "type": "chore", "section": "Miscellaneous Chores", "hidden": true },
+    { "type": "refactor", "section": "Code Refactoring" },
+    { "type": "test", "section": "Tests", "hidden": true },
+    { "type": "build", "section": "Build System" },
+    { "type": "ci", "section": "Continuous Integration", "hidden": true }
+  ]
 }
