ci(github-actions): github workflow for develop branch

--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -22,6 +22,7 @@ jobs:
     needs: qa
     with:
       publish_test_report: false
+      sonar_scan_name: SonarCloud - Develop
     secrets: inherit
   publish_backend:
     uses: ./.github/workflows/publish_image.yml
