ci(github-actions): github workflow for develop branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,12 @@ on:
   push:
     branches: "main"
     paths-ignore: [ "docs/**" ]
-    tags-ignore: [ "v*" ]
 
 jobs:
   qa:
     uses: ./.github/workflows/qa.yml
+  with:
+    silent_linters: true
   publish_reports:
     uses: ./.github/workflows/publish_reports.yml
     if: success() || failure()
