--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -16,8 +16,11 @@ on:
 jobs:
   qa:
     uses: ./.github/workflows/qa.yml
-  with:
-    silent_linters: true
+    with:
+      silent_linters: true
+    permissions:
+      checks: none
+      pull-requests: none
   publish_reports:
     uses: ./.github/workflows/publish_reports.yml
     if: success() || failure()
@@ -26,15 +29,24 @@ jobs:
       publish_test_report: false
       sonar_scan_name: SonarCloud - Develop
     secrets: inherit
+    permissions:
+      checks: none
+      pull-requests: none
   publish_backend:
     uses: ./.github/workflows/publish_image.yml
     with:
       image_name: "backend"
       dockerfile: "./compose/production/django/Dockerfile"
     secrets: inherit
+    permissions:
+      checks: none
+      pull-requests: none
   deploy:
     uses: ./.github/workflows/deploy_yc.yml
     needs: publish_backend
     with:
       env_name: "next"
     secrets: inherit
+    permissions:
+      checks: none
+      pull-requests: none
