ci(github-actions): github workflow for develop branch

--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -1,4 +1,4 @@
-name: Next version
+name: Next version deploy
 
 permissions:
   checks: none
@@ -14,24 +14,24 @@ on:
     branches: "develop"
 
 jobs:
-  qa:
-    uses: ./.github/workflows/qa.yml
-    with:
-      silent_linters: true
-    permissions:
-      checks: none
-      pull-requests: none
-  publish_reports:
-    uses: ./.github/workflows/publish_reports.yml
-    if: success() || failure()
-    needs: qa
-    with:
-      publish_test_report: false
-      sonar_scan_name: SonarCloud - Develop
-    secrets: inherit
-    permissions:
-      checks: none
-      pull-requests: none
+#  qa:
+#    uses: ./.github/workflows/qa.yml
+#    with:
+#      silent_linters: true
+#    permissions:
+#      checks: none
+#      pull-requests: none
+#  publish_reports:
+#    uses: ./.github/workflows/publish_reports.yml
+#    if: success() || failure()
+#    needs: qa
+#    with:
+#      publish_test_report: false
+#      sonar_scan_name: SonarCloud - Develop
+#    secrets: inherit
+#    permissions:
+#      checks: none
+#      pull-requests: none
   publish_backend:
     uses: ./.github/workflows/publish_image.yml
     with:
