chore(main): merge develop into main
build(production-run): using standart traefik image

chore: ConventionalCommit plugin setup

fix(core): broken accounts urls

ci(github-actions): github workflow for develop branch

docs(readme): badges

ci(github-actions): parametrise publish_image workflow

ci(github-actions): Current version workflow

ci(github-actions): Release workflow

chores(release-please): Release please changelog sections

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

fix: dev: ci pylint

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

ci(github-actions): github workflow for develop branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Pull request
+name: Current version
 
 permissions:
-  checks: write
-  pull-requests: write
+  checks: none
+  pull-requests: none
 
 # Enable Buildkit and let compose use it to speed up image building
 env:
@@ -10,23 +10,25 @@ env:
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
-  pull_request:
-    branches:
-      - main
+  push:
+    branches: "main"
+    paths-ignore: [ "docs/**" ]
 
 jobs:
   qa:
     uses: ./.github/workflows/qa.yml
-    permissions:
-      checks: write
-      pull-requests: write
     with:
       silent_linters: true
+    permissions:
+      checks: none
+      pull-requests: none
   publish_reports:
     uses: ./.github/workflows/publish_reports.yml
     if: success() || failure()
     needs: qa
+    with:
+      publish_test_report: false
     secrets: inherit
     permissions:
-      checks: write
-      pull-requests: write
+      checks: none
+      pull-requests: none
