--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       image_name: "backend"
       dockerfile: "./compose/production/django/Dockerfile"
       tag_latest: true
-      release:
+      release: ${{ github.ref_name }}
     secrets: inherit
   deploy:
     uses: ./.github/workflows/deploy_yc.yml
