ci(github-actions): added docker image prune after deployment

--- a/.github/workflows/deploy_yc.yml
+++ b/.github/workflows/deploy_yc.yml
@@ -56,3 +56,4 @@ jobs:
             cd ${{ inputs.working_dir }}
             export PATH="$PATH:${{ inputs.yc_path }}"
             ${{ inputs.script }}
+            docker image prune
