--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "prismjs": "1.29.0",
     "roboto-fontface": "0.10.0",
     "sass": "1.62.1",
@@ -34,6 +35,7 @@
     "vue-i18n": "9.2.2",
     "vue-prism-component": "2.0.0",
     "vue-router": "4.1.6",
+    "vue-toastification": "next",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
     "vuetify": "3.2.1",
