--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "preview": "vite preview --port 5050",
     "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx",
+    "prettier:check": "prettier --check .",
     "build:icons": "node src/@iconify/build-icons.js",
     "postinstall": "npm run build:icons"
   },
