--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.organization=nonameitem
 sonar.qualitygate.wait=true
 
 sonar.python.version=3.10
-sonar.sources=read_comics
+sonar.sources=read_comics,frontend
 sonar.tests=read_comics
 sonar.test.inclusions=**/test/**
 sonar.exclusions=**/test/**,**/migrations/**
@@ -12,7 +12,7 @@ sonar.python.coverage.reportPaths=coverage_report/coverage.xml
 sonar.python.flake8.reportPaths=flake8_report/flake8.txt
 sonar.python.pylint.reportPaths=pylint_report/pylint.txt
 
-sonar.eslint.reportPaths=eslint_report/eslint_report.json
+sonar.eslint.reportPaths=eslint_report/eslint-report.json
 
 x-release-please-start-version
 sonar.projectVersion=1.3.2
