--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "build:icons": "node src/@iconify/build-icons.js",
+    "build:icons:fa": "node src/plugins/fontawesome-autoimport.js",
     "postinstall": "npm run build:icons"
   },
   "dependencies": {
@@ -21,8 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/sharp-light-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "latest-3",
     "@tabler/icons": "^2.18.0",
     "@vueuse/core": "10.1.0",
@@ -79,6 +79,7 @@
     "lint-staged": "^13.2.2",
     "postcss-html": "1.5.0",
     "prettier": "2.8.8",
+    "rollup-plugin-command": "^1.1.3",
     "stylelint": "14.15.0",
     "stylelint-config-idiomatic-order": "9.0.0",
     "stylelint-config-standard-scss": "6.1.0",
@@ -91,7 +92,7 @@
     "vite-plugin-vuetify": "1.0.2",
     "vue-shepherd": "3.0.0"
   },
-  "packageManager": "yarn@1.22.18",
+  "packageManager": "yarn@3.5.1",
   "resolutions": {
     "postcss": "8"
   }
