--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vuexy-vuejs-admin-template",
-  "version": "8.0.0",
+  "name": "read-comics",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050",
+    "preview": "vite preview --port 5050 --host 0.0.0.0",
     "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx",
     "lint:check": "eslint . -c .eslintrc.js --ext .ts,.js,.vue,.tsx,.jsx",
     "lint:check:ci": "eslint . -c .eslintrc.js --ext .ts,.js,.vue,.tsx,.jsx -f json > eslint-report.json",
@@ -13,9 +13,10 @@
     "prettier:check": "prettier --check .",
     "build:icons": "node src/@iconify/build-icons.js",
     "build:icons:fa": "node src/plugins/fontawesome-autoimport.js",
-    "postinstall": "npm run build:icons"
+    "postinstall": "yarn run build:icons"
   },
   "dependencies": {
+    "@babel/core": "^7.21.8",
     "@casl/ability": "6.5.0",
     "@casl/vue": "2.2.1",
     "@floating-ui/dom": "1.2.7",
@@ -24,7 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/sharp-light-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "latest-3",
-    "@tabler/icons": "^2.18.0",
+    "@tabler/icons": "^2.17.0",
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
     "apexcharts-clevision": "3.28.5",
@@ -79,7 +80,6 @@
     "lint-staged": "^13.2.2",
     "postcss-html": "1.5.0",
     "prettier": "2.8.8",
-    "rollup-plugin-command": "^1.1.3",
     "stylelint": "14.15.0",
     "stylelint-config-idiomatic-order": "9.0.0",
     "stylelint-config-standard-scss": "6.1.0",
@@ -87,12 +87,12 @@
     "unplugin-auto-import": "0.15.3",
     "unplugin-vue-components": "0.24.1",
     "vite": "4.3.3",
-    "vite-plugin-pages": "0.29.0",
+    "vite-plugin-pages": "0.29.1",
     "vite-plugin-vue-layouts": "0.8.0",
     "vite-plugin-vuetify": "1.0.2",
     "vue-shepherd": "3.0.0"
   },
-  "packageManager": "yarn@3.5.1",
+  "packageManager": "yarn@1.22.18",
   "resolutions": {
     "postcss": "8"
   }
