--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,17 +13,15 @@ on:
     types: [published]
 
 jobs:
-  publish_backend:
+  publish:
     uses: ./.github/workflows/publish_image.yml
     with:
-      image_name: "backend"
-      dockerfile: "./compose/production/django/Dockerfile"
       tag_latest: true
       release: ${{ github.ref_name }}
     secrets: inherit
   deploy:
     uses: ./.github/workflows/deploy_yc.yml
-    needs: publish_backend
+    needs: publish
     with:
       env_name: "production"
     secrets: inherit
