--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/sharp-light-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "latest-3",
+    "@lukemorales/query-key-factory": "^1.2.0",
     "@tabler/icons": "^2.17.0",
+    "@tanstack/vue-query": "^4.29.7",
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
     "apexcharts-clevision": "3.28.5",
@@ -34,13 +36,14 @@
     "chart.js": "4.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "jwt-decode": "3.1.2",
-    "pinia": "2.0.35",
+    "luxon": "^3.3.0",
+    "pinia": "^2.1.3",
     "pinia-plugin-persistedstate": "^3.1.0",
     "prismjs": "1.29.0",
     "roboto-fontface": "0.10.0",
     "sass": "1.62.1",
     "unplugin-vue-define-options": "1.3.4",
-    "vue": "3.2.47",
+    "vue": "3.3.4",
     "vue-chartjs": "5.2.0",
     "vue-flatpickr-component": "11.0.3",
     "vue-i18n": "9.2.2",
