ci(github-actions): mypy check

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,16 @@
 sonar.projectKey=NoNameItem_read-comics
 sonar.organization=nonameitem
-
 sonar.qualitygate.wait=true
-
 sonar.python.version=3.10
-sonar.sources=read_comics,frontend
+sonar.sources=read_comics,frontend,config/settings
 sonar.tests=read_comics
 sonar.test.inclusions=**/test/**
 sonar.exclusions=**/test/**,**/migrations/**,**/@core/**,**/@layouts/**
 sonar.python.coverage.reportPaths=coverage_report/coverage.xml
 sonar.python.flake8.reportPaths=flake8_report/flake8.txt
 sonar.python.pylint.reportPaths=pylint_report/pylint.txt
-
+sonar.python.mypy.reportPaths=mypy_report/mypy.txt
 sonar.eslint.reportPaths=eslint_report/eslint-report.json
-
 x-release-please-start-version
 sonar.projectVersion=1.3.2
 x-release-please-end
