ci(github-actions): set FONTAWESOME_NPM_AUTH_TOKEN in js linters

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -171,7 +171,9 @@ jobs:
 
       - name: Install dependencies
         working-directory: frontend
-        run: yarn
+        run: |
+          echo $FONTAWESOME_NPM_AUTH_TOKEN
+          yarn
 
       - name: Run eslint
         working-directory: frontend
