ci(github-actions): set FONTAWESOME_NPM_AUTH_TOKEN in js linters

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
     permissions:
       checks: none
       pull-requests: none
+    secrets: inherit
   publish_reports:
     uses: ./.github/workflows/publish_reports.yml
     if: ${{ success() || failure() }}
