--- a/.github/workflows/deploy_yc.yml
+++ b/.github/workflows/deploy_yc.yml
@@ -56,4 +56,4 @@ jobs:
             cd ${{ inputs.working_dir }}
             export PATH="$PATH:${{ inputs.yc_path }}"
             ${{ inputs.script }}
-            docker image prune
+            docker image prune -af
