--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,8 @@ sonar.python.version=3.10
 sonar.sources=read_comics,frontend,config/settings
 sonar.tests=read_comics
 sonar.test.inclusions=**/test/**
-sonar.exclusions=**/test/**,**/migrations/**,**/@core/**,**/@layouts/**,,**/@iconify/**,read_comics/utils/logging.py
+sonar.exclusions=**/tests/**,**/migrations/**,**/@core/**,**/@layouts/**,,**/@iconify/**,read_comics/utils/logging.py
+sonar.coverage.exclusions=**/tests/**,**/migrations/**,frontend/**
 sonar.python.coverage.reportPaths=coverage_report/coverage.xml
 sonar.python.flake8.reportPaths=flake8_report/flake8.txt
 sonar.python.pylint.reportPaths=pylint_report/pylint.txt
