--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,9 @@ version: '3'
 volumes:
   local_postgres_data: {}
   local_postgres_data_backups: {}
+  local_mongodb_data: { }
+  local_mongodb_config: { }
+
 
 services:
   django: &django
@@ -15,6 +18,7 @@ services:
       - postgres
       - redis
       - mailhog
+      - celeryworker
     volumes:
       - .:/app:z
     env_file:
@@ -39,7 +43,25 @@ services:
     ports:
       - "5432:5432"
 
-#  docs:
+  mongodb:
+    image: mongo:8.0.4
+    container_name: mongodb
+    volumes:
+      - ./compose/local/mongodb:/docker-entrypoint-initdb.d
+      - local_mongodb_data:/data/db
+      - local_mongodb_config:/data/configdb
+      - ./compose/local/mongodb/secret.key:/data/db/secret.key
+    env_file:
+      - ./.envs/.local/.mongo
+    ports:
+      - "27017:27017"
+#    healthcheck:
+#      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo -u $${MONGO_INITDB_ROOT_USERNAME} -p $${MONGO_INITDB_ROOT_PASSWORD} --quiet) -eq 1
+#      interval: 10s
+#    command: "--bind_ip_all --keyFile /data/db/secret.key --replSet local_replica_set"
+
+
+  #  docs:
 #    image: read_comics_local_docs
 #    container_name: docs
 #    build:
