chore: prepare to move on self-hosted

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Tear down the Stack
         if: success() || failure()
-        run: docker-compose -f local.yml down
+        run: docker compose -f local.yml down
 
   pylint:
     name: PyLint
@@ -96,4 +96,4 @@ jobs:
 
       - name: Tear down the Stack
         if: success() || failure()
-        run: docker-compose -f local.yml down
+        run: docker compose -f local.yml down
