--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -23,7 +23,7 @@ jobs:
           touch .envs/.local/.django_unsafe
           echo "DO_SPACE_DATA_KEY=test" >> .envs/.local/.django_unsafe
           echo "DO_SPACE_DATA_SECRET=test" >> .envs/.local/.django_unsafe
-          echo "COMICVINE_API_KEY=test" >>  .envs/.local/.django_unsafe
+          echo "COMICVINE_API_KEYS=test" >>  .envs/.local/.django_unsafe
 
       - name: Build the Stack
         run: docker compose -f local.yml build
@@ -65,7 +65,7 @@ jobs:
           touch .envs/.local/.django_unsafe
           echo "DO_SPACE_DATA_KEY=test" >> .envs/.local/.django_unsafe
           echo "DO_SPACE_DATA_SECRET=test" >> .envs/.local/.django_unsafe
-          echo "COMICVINE_API_KEY=test" >>  .envs/.local/.django_unsafe
+          echo "COMICVINE_API_KEYS=test" >>  .envs/.local/.django_unsafe
 
       - name: Build the Stack
         run: docker compose -f local.yml build
