--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -24,6 +24,10 @@ jobs:
           echo "DO_SPACE_DATA_KEY=test" >> .envs/.local/.django_unsafe
           echo "DO_SPACE_DATA_SECRET=test" >> .envs/.local/.django_unsafe
           echo "COMICVINE_API_KEYS=test" >>  .envs/.local/.django_unsafe
+          touch .envs/.local/.rabbit_unsafe
+          echo "RABBITMQ_DEFAULT_USER=test" >> .envs/.local/.rabbit_unsafe
+          echo "RABBITMQ_DEFAULT_PASS=test" >> .envs/.local/.rabbit_unsafe
+          echo "RABBITMQ_DEFAULT_VHOST=test" >> .envs/.local/.rabbit_unsafe
 
       - name: Build the Stack
         run: docker compose -f local.yml build
@@ -66,6 +70,10 @@ jobs:
           echo "DO_SPACE_DATA_KEY=test" >> .envs/.local/.django_unsafe
           echo "DO_SPACE_DATA_SECRET=test" >> .envs/.local/.django_unsafe
           echo "COMICVINE_API_KEYS=test" >>  .envs/.local/.django_unsafe
+          touch .envs/.local/.rabbit_unsafe
+          echo "RABBITMQ_DEFAULT_USER=test" >> .envs/.local/.rabbit_unsafe
+          echo "RABBITMQ_DEFAULT_PASS=test" >> .envs/.local/.rabbit_unsafe
+          echo "RABBITMQ_DEFAULT_VHOST=test" >> .envs/.local/.rabbit_unsafe
 
       - name: Build the Stack
         run: docker compose -f local.yml build
