ci: don't ignore changes in ./compose in release-please job

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,7 @@
   "packages": {
     ".": {
       "release-type": "python",
-      "exclude-paths": ["docs", "compose",".envs" ]
+      "exclude-paths": ["docs",".envs" ]
     }
   },
   "extra-files": [
