--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 volumes:
   local_postgres_data: {}
   local_postgres_data_backups: {}
@@ -111,6 +109,7 @@ services:
     environment:
       AUTOSCALE: 6,0
       QUEUES: read_comics_default,read_comics_spiders
+      WORKER_NAME: worker
     command: /start-celeryworker
 
 #  celerybeat:
