--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -68,9 +68,19 @@ RUN chmod +x /entrypoint
 COPY --chown=django:django ./compose/production/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
+
+
 COPY --chown=django:django ./compose/production/django/celery/worker/start /start-celeryworker
 RUN sed -i 's/\r$//g' /start-celeryworker
 RUN chmod +x /start-celeryworker
+
+COPY --chown=django:django ./compose/production/django/celery/worker/start_clear_all_queues /start-celeryworker-clear-all
+RUN sed -i 's/\r$//g' /start-celeryworker-clear-all
+RUN chmod +x /start-celeryworker-clear-all
+
+COPY --chown=django:django ./compose/production/django/celery/worker/start_clear_queues /start-celeryworker-clear
+RUN sed -i 's/\r$//g' /start-celeryworker-clear
+RUN chmod +x /start-celeryworker-clear
 
 
 COPY --chown=django:django ./compose/production/django/celery/beat/start /start-celerybeat
